# CV_Project

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-serving.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
docker/: Dockerfile
reports/: metrics.json  model_report.md
scripts/: devtools.py
sql/: 01_clean.sql  02_features.sql
src/credit_risk/: __init__.py  config.py  logging_config.py  pipeline.py  storage.py
src/credit_risk/features/: build.py
src/credit_risk/ingest/: download.py  load_raw.py
src/credit_risk/monitoring/: drift.py  prediction_log.py
src/credit_risk/serving/: app.py  predictor.py  schemas.py
src/credit_risk/training/: evaluate.py  registry.py  train_sklearn.py  train_torch.py
src/credit_risk/warehouse/: __init__.py  base.py  bigquery_warehouse.py  duckdb_warehouse.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_evaluate.py  test_features.py  test_monitoring.py  test_serving.py
