[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk"
version = "1.0.0"
description = "End-to-end credit default risk ML pipeline on Google Cloud Platform"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
    "gcp: requires live Google Cloud credentials (deselect with '-m \"not gcp\"')",
    "slow: model training, minutes rather than seconds",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]
ignore = [
    "E501",  # line length is handled by the formatter
    "B008",  # FastAPI Depends() in defaults is the documented idiom
]
